; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/ui/extr_ui_main.c_Text_Height.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/ui/extr_ui_main.c_Text_Height.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_14__ = type { %struct.TYPE_9__ }
%struct.TYPE_9__ = type { %struct.TYPE_8__ }
%struct.TYPE_8__ = type { %struct.TYPE_11__, %struct.TYPE_11__, %struct.TYPE_11__ }
%struct.TYPE_11__ = type { float, %struct.TYPE_10__* }
%struct.TYPE_10__ = type { float }
%struct.TYPE_12__ = type { float }
%struct.TYPE_13__ = type { float }

@uiInfo = common dso_local global %struct.TYPE_14__ zeroinitializer, align 8
@ui_smallFont = common dso_local global %struct.TYPE_12__ zeroinitializer, align 4
@ui_bigFont = common dso_local global %struct.TYPE_13__ zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @Text_Height(i8* %0, float %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca float, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca float, align 4
  %10 = alloca %struct.TYPE_10__*, align 8
  %11 = alloca float, align 4
  %12 = alloca i8*, align 8
  %13 = alloca %struct.TYPE_11__*, align 8
  store i8* %0, i8** %4, align 8
  store float %1, float* %5, align 4
  store i32 %2, i32* %6, align 4
  %14 = load i8*, i8** %4, align 8
  store i8* %14, i8** %12, align 8
  store %struct.TYPE_11__* getelementptr inbounds (%struct.TYPE_14__, %struct.TYPE_14__* @uiInfo, i32 0, i32 0, i32 0, i32 2), %struct.TYPE_11__** %13, align 8
  %15 = load float, float* %5, align 4
  %16 = load float, float* getelementptr inbounds (%struct.TYPE_12__, %struct.TYPE_12__* @ui_smallFont, i32 0, i32 0), align 4
  %17 = fcmp ole float %15, %16
  br i1 %17, label %18, label %19

18:                                               ; preds = %3
  store %struct.TYPE_11__* getelementptr inbounds (%struct.TYPE_14__, %struct.TYPE_14__* @uiInfo, i32 0, i32 0, i32 0, i32 1), %struct.TYPE_11__** %13, align 8
  br label %25

19:                                               ; preds = %3
  %20 = load float, float* %5, align 4
  %21 = load float, float* getelementptr inbounds (%struct.TYPE_13__, %struct.TYPE_13__* @ui_bigFont, i32 0, i32 0), align 4
  %22 = fcmp oge float %20, %21
  br i1 %22, label %23, label %24

23:                                               ; preds = %19
  store %struct.TYPE_11__* getelementptr inbounds (%struct.TYPE_14__, %struct.TYPE_14__* @uiInfo, i32 0, i32 0, i32 0, i32 0), %struct.TYPE_11__** %13, align 8
  br label %24

24:                                               ; preds = %23, %19
  br label %25

25:                                               ; preds = %24, %18
  %26 = load float, float* %5, align 4
  %27 = load %struct.TYPE_11__*, %struct.TYPE_11__** %13, align 8
  %28 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %27, i32 0, i32 0
  %29 = load float, float* %28, align 8
  %30 = fmul float %26, %29
  store float %30, float* %11, align 4
  store float 0.000000e+00, float* %9, align 4
  %31 = load i8*, i8** %4, align 8
  %32 = icmp ne i8* %31, null
  br i1 %32, label %33, label %91

33:                                               ; preds = %25
  %34 = load i8*, i8** %4, align 8
  %35 = call i32 @strlen(i8* %34)
  store i32 %35, i32* %7, align 4
  %36 = load i32, i32* %6, align 4
  %37 = icmp sgt i32 %36, 0
  br i1 %37, label %38, label %44

38:                                               ; preds = %33
  %39 = load i32, i32* %7, align 4
  %40 = load i32, i32* %6, align 4
  %41 = icmp sgt i32 %39, %40
  br i1 %41, label %42, label %44

42:                                               ; preds = %38
  %43 = load i32, i32* %6, align 4
  store i32 %43, i32* %7, align 4
  br label %44

44:                                               ; preds = %42, %38, %33
  store i32 0, i32* %8, align 4
  br label %45

45:                                               ; preds = %89, %63, %44
  %46 = load i8*, i8** %12, align 8
  %47 = icmp ne i8* %46, null
  br i1 %47, label %48, label %57

48:                                               ; preds = %45
  %49 = load i8*, i8** %12, align 8
  %50 = load i8, i8* %49, align 1
  %51 = sext i8 %50 to i32
  %52 = icmp ne i32 %51, 0
  br i1 %52, label %53, label %57

53:                                               ; preds = %48
  %54 = load i32, i32* %8, align 4
  %55 = load i32, i32* %7, align 4
  %56 = icmp slt i32 %54, %55
  br label %57

57:                                               ; preds = %53, %48, %45
  %58 = phi i1 [ false, %48 ], [ false, %45 ], [ %56, %53 ]
  br i1 %58, label %59, label %90

59:                                               ; preds = %57
  %60 = load i8*, i8** %12, align 8
  %61 = call i64 @Q_IsColorString(i8* %60)
  %62 = icmp ne i64 %61, 0
  br i1 %62, label %63, label %66

63:                                               ; preds = %59
  %64 = load i8*, i8** %12, align 8
  %65 = getelementptr inbounds i8, i8* %64, i64 2
  store i8* %65, i8** %12, align 8
  br label %45

66:                                               ; preds = %59
  %67 = load %struct.TYPE_11__*, %struct.TYPE_11__** %13, align 8
  %68 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %67, i32 0, i32 1
  %69 = load %struct.TYPE_10__*, %struct.TYPE_10__** %68, align 8
  %70 = load i8*, i8** %12, align 8
  %71 = load i8, i8* %70, align 1
  %72 = sext i8 %71 to i32
  %73 = sext i32 %72 to i64
  %74 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %69, i64 %73
  store %struct.TYPE_10__* %74, %struct.TYPE_10__** %10, align 8
  %75 = load float, float* %9, align 4
  %76 = load %struct.TYPE_10__*, %struct.TYPE_10__** %10, align 8
  %77 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %76, i32 0, i32 0
  %78 = load float, float* %77, align 4
  %79 = fcmp olt float %75, %78
  br i1 %79, label %80, label %84

80:                                               ; preds = %66
  %81 = load %struct.TYPE_10__*, %struct.TYPE_10__** %10, align 8
  %82 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %81, i32 0, i32 0
  %83 = load float, float* %82, align 4
  store float %83, float* %9, align 4
  br label %84

84:                                               ; preds = %80, %66
  %85 = load i8*, i8** %12, align 8
  %86 = getelementptr inbounds i8, i8* %85, i32 1
  store i8* %86, i8** %12, align 8
  %87 = load i32, i32* %8, align 4
  %88 = add nsw i32 %87, 1
  store i32 %88, i32* %8, align 4
  br label %89

89:                                               ; preds = %84
  br label %45

90:                                               ; preds = %57
  br label %91

91:                                               ; preds = %90, %25
  %92 = load float, float* %9, align 4
  %93 = load float, float* %11, align 4
  %94 = fmul float %92, %93
  %95 = fptosi float %94 to i32
  ret i32 %95
}

declare dso_local i32 @strlen(i8*) #1

declare dso_local i64 @Q_IsColorString(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
